
Bug Fixes:
General | dphys-swapfile: Has been removed and replace with our own swapfile generation system. Uses fallocate to quickly create the swapfile of any size (1-2 seconds): https://github.com/Fourdee/DietPi/issues/1602
General | RPi: Resolved issue with gettext error during login due to /etc/profile.d/wifi-country.sh: https://github.com/Fourdee/DietPi/issues/1631
DietPi-Drive_Manager | Resolved an issue where x-systemd.automount would fail if autofs4 was disabled in kernel/modules (eg: Rock64). x-systemd.automount is now disabled for systems which fail autofs4 detection: https://github.com/Fourdee/DietPi/issues/1607
DietPi-Config | Removed 'firmware-ralink' pre-req from WiFi enable. This is a virtual package for 'firmware-misc-nonfree': https://github.com/Fourdee/DietPi/issues/1631
DietPi-Software | PineA64: Resolved issue with failure to run fbturbo driver on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1604
DietPi-Software | LMS/Squeezebox: Resolved an issue where installation could fail to complete, due to service failing to stop gracefully. Resolved CPAN issues running under ARMv8 and Stretch: https://github.com/Fourdee/DietPi/issues/1613#issuecomment-372787574
DietPi-Software | ShairportSync (Jessie): Resolved failed service start due to lack of libssl1.1: https://github.com/Fourdee/DietPi/issues/1620
DietPi-Software | MATE + VNC4: Resolved grey screen: https://github.com/Fourdee/DietPi/issues/1645
DietPi-Software | Mopidy: Resolved no sound due to missing gstreamer1.0-alsa package: https://github.com/Fourdee/DietPi/issues/1625

-----------------------------------------------------------------------------------------------------------

v6.4 - HotFix
(09/03/18)

Changes / Improvements / Optimizations:
DietPi-Cron | Added ability to set minutely based cron jobs (eg: every 3 minutes), using /etc/cron.minutely. Many thanks to @d5c0d3 for adding this feature: https://github.com/Fourdee/DietPi/pull/1578