@@ -525,6 +525,17 @@ _EOF_
 
 			fi
 			#-------------------------------------------------------------------------------
+			#RPI Piano allo firmware:
+			if (( $G_HW_MODEL < 10 )); then
+
+				G_RUN_CMD wget https://github.com/allocom/piano-firmware/archive/master.zip -O package.zip
+				unzip -o package.zip
+				rm package.zip
+				cp -R piano-firmware-master/lib/firmware/allo /lib/firmware/
+				rm -R piano-firmware-master
+
+			fi
+			#-------------------------------------------------------------------------------
 
 		fi
 
