@@ -21,6 +21,7 @@ DietPi-Software | RPi: For all software titles which require unrar, unrar-nonfre
 Bug Fixes:
 General | dphys-swapfile: Has been removed and replace with our own swapfile generation system. Uses fallocate to quickly create the swapfile of any size (1-2 seconds): https://github.com/Fourdee/DietPi/issues/1602
 General | RPi: Resolved issue with gettext error during login due to /etc/profile.d/wifi-country.sh: https://github.com/Fourdee/DietPi/issues/1631
+General | RPi: Resolved missing Allo Piano DAC firmware.
 DietPi-Drive_Manager | Resolved an issue where x-systemd.automount would fail if autofs4 was disabled in kernel/modules (eg: Rock64). x-systemd.automount is now disabled for systems which fail autofs4 detection: https://github.com/Fourdee/DietPi/issues/1607
 DietPi-Config | Removed 'firmware-ralink' pre-req from WiFi enable. This is a virtual package for 'firmware-misc-nonfree': https://github.com/Fourdee/DietPi/issues/1631
 DietPi-Software | PineA64: Resolved issue with failure to run fbturbo driver on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1604
